--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "react-redux": "^8.1.0",
+    "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.3"
